# nasa_priceradar

./: Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: example_nyc.yml
data/: imerg_24h_accum.tif
scripts/: run_priceradar.py
src/nasa_priceradar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/priceradar/: __init__.py  anomalies.py  baseline.py  cli.py  config.py  exposure.py  io.py  mapviz.py  pipeline.py
test/: test_baseline.py
