[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nasa-priceradar"
version = "0.1.0"
requires-python = ">=3.10"
description = "Storm → Price Anomaly Radar"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
